2008-02-06  Bob Halley  <halley@dnspython.org>

	* dns/ipv6.py (inet_aton):  We could raise an exception other than
	  dns.exception.SyntaxError in some cases.

	* dns/tsig.py: Raise an exception when the peer has set a non-zero
	  TSIG error.

2007-11-25  Bob Halley  <halley@dnspython.org

	* (Version 1.6.0 released)

2007-11-25  Bob Halley  <halley@dnspython.org

	* dns/query.py (_wait_for): if select() raises an exception due to
	  EINTR, we should just select() again.

2007-06-13  Bob Halley  <halley@dnspython.org>

	* dns/inet.py: Added is_multicast().

	* dns/query.py (udp):  If the queried address is a multicast address, then
	  don't check that the address of the response is the same as the address
	  queried.

2007-05-24  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/NAPTR.py: NAPTR comparisons didn't compare the
	  preference field due to a typo.

2007-02-07  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Integrate code submitted by Paul Marks to
	  determine whether a Windows NIC is enabled.  The way dnspython
	  used to do this does not work on Windows Vista.

2006-12-10  Bob Halley  <halley@dnspython.org>

	* (Version 1.5.0 released)
	
2006-11-03  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/DHCID.py: Added support for the DHCID RR type.

2006-11-02  Bob Halley  <halley@dnspython.org>

	* dns/query.py (udp): Messages from unexpected sources can now be
	  ignored by setting ignore_unexpected to True.

2006-10-31  Bob Halley  <halley@dnspython.org>

	* dns/query.py (udp): When raising UnexpectedSource, add more
	  detail about what went wrong to the exception.

2006-09-22  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.use_edns): add reasonable defaults for
	  the ednsflags, payload, and request_payload parameters.

	* dns/message.py (Message.want_dnssec): add a convenience method for
	  enabling/disabling the "DNSSEC desired" flag in requests.

	* dns/message.py (make_query): add "use_edns" and "want_dnssec"