@@ -1,3 +1,11 @@
+2008-06-03  Bob Halley  <halley@dnspython.org>
+
+	* dns/message.py (Message.set_rcode): The mask used preserved the
+	  extended rcode, instead of everything else in ednsflags.
+
+	* dns/message.py (Message.use_edns): ednsflags was not kept
+	  coherent with the specified edns version.
+
 2008-02-06  Bob Halley  <halley@dnspython.org>
 
 	* dns/ipv6.py (inet_aton):  We could raise an exception other than
